FAC-329: add-space-member.user-id.notFound error added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -55,3 +55,4 @@ add-space-member.email.notUll='email' may not be null
 add-space-member.space-id.notFound=Space with the given id does not exist
 add-space-member.invitee-access.found=The inviter does not have access to the space with the 'spaceId'
 add-space-member.inviter-access.notFound=The user with the 'userId' already has access to the space with the 'spaceId'
+add-space-member.user-id.notFound=User with the 'email' address does not exist.
