FAC-334 Check a kit exist with the given kitId
Add a validation which checks that the kit exists with the given kitId. Add corresponding exceptions messages to validations.

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -1,9 +1,10 @@
 translate-kit-dsl.unable.to.parse.json=error in parsing dsl content
 
-file-storage.file.notFound=File not found
+file-storage.file.notFound=File does not found
 
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 kit.id.notFound=AssessmentKit with the given id does not exist
+attribute.id.notFound=Attribute with the given id does not exist
 expert-group.id.notFound=ExpertGroup with the given id does not exist
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
