FAC-329: minor change

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -52,8 +52,8 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 
 add-space-member.space-id.notUll='spaceId' may not be null
 add-space-member.email.notUll='email' may not be null
-add-space-member.space-id.notFound=Space with the given id does not exist
+add-space-member.space-id.notFound=No space with the given id was found
 add-space-member.invitee-access.found=The user with the 'userId' already has access to the space with the 'spaceId'
 add-space-member.inviter-access.notFound=The inviter does not have access to the space with the 'spaceId'
-add-space-member.user-id.notFound=User with the 'email' address does not exist.
+add-space-member.email.notFound=No user with the given email was found
 
