--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -82,3 +82,4 @@ edit-kit-info.summary.size.max='summary' length must be less than or equal to 20
 edit-kit-info.about.size.min='about' length must be greater than or equal to 3
 edit-kit-info.about.size.max='about' length must be less than or equal to 1000
 edit-kit-info.tags.size.min=Tag is required. Assessment kit should have at least one tag.
+update-kit-info.tagId.notFount='TagId' is not valid.
