--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -73,13 +73,13 @@ get-kit-stats.kitId.notNull='kitId' may not be null
 
 get-kit-editable-info.kitId.notNull='kitId' may not be null
 
-edit-kit-info.kitId.notNull='assessmentKitId' may not be empty
-edit-kit-info.kitId.notFound=AssessmentKit with the given id does not exist
-edit-kit-info.title.size.min='title' length must be greater than or equal to 3
-edit-kit-info.title.size.max='title' length must be less than or equal to 50
-edit-kit-info.summary.size.min='summary' length must be greater than or equal to 3
-edit-kit-info.summary.size.max='summary' length must be less than or equal to 200
-edit-kit-info.about.size.min='about' length must be greater than or equal to 3
-edit-kit-info.about.size.max='about' length must be less than or equal to 1000
-edit-kit-info.tags.size.min=Tag is required. Assessment kit should have at least one tag.
+update-kit-info.kitId.notNull='assessmentKitId' may not be empty
+update-kit-info.kitId.notFound=AssessmentKit with the given id does not exist
+update-kit-info.title.size.min='title' length must be greater than or equal to 3
+update-kit-info.title.size.max='title' length must be less than or equal to 50
+update-kit-info.summary.size.min='summary' length must be greater than or equal to 3
+update-kit-info.summary.size.max='summary' length must be less than or equal to 200
+update-kit-info.about.size.min='about' length must be greater than or equal to 3
+update-kit-info.about.size.max='about' length must be less than or equal to 1000
+update-kit-info.tags.size.min=Tag is required. Assessment kit should have at least one tag.
 update-kit-info.tagId.notFount='TagId' is not valid.
