FAC-320 Add validations to GetKitQuestionnaireDetailService
Due to the adding new validations, some tests added to GetKitQuestionnaireDetailServiceTest

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -5,6 +5,8 @@ file-storage.file.notFound=File not found
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 kit.id.notFound=AssessmentKit with the given id does not exist
 expert-group.id.notFound=ExpertGroup with the given id does not exist
+questionnaire.id.notFound=Questionnaire with the given id does not exit
+questionnaire.questionnaireId-kitId.notFound=no questionnaire found by this 'questionnaireId' and 'kitId'
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
@@ -39,7 +41,6 @@ get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exi
 
 get-questionnaire.kitId.notNull='kitId' may not be empty
 get-questionnaire.questionnaireId.notNull='questionnaireId' may not be empty
-get-questionnaire.questionnaireId.notFound=no questionnaire found by this 'questionnaireId' and 'kitId'
 
 get-kit-dsl-download-link.kitId.notNull='kitId' may not be empty
 get-kit-dsl-download-link.dslFile.notFound=DSL file not found
