--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -73,4 +73,4 @@ create-kit-by-dsl.expert-group-id.notNull='expertGroupId' may not be null
 
 get-kit-stats.kitId.notNull='kitId' does not exist
 
-get-kit-detail.kitVersionId.notNull='kitVersionId' may not be null
+get-kit-detail.kitId.notNull='kitId' may not be null
