--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -53,5 +53,5 @@ confirm-expert-group-invitation.invite-token.notValid='inviteToken' is not valid
 confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
 
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
-delete-expert-group-member.user-id.notNull='userId' may not be null
-delete-expert-group-member.user-id.notFound=Member with the given 'user-id' does not exist.
+delete-expert-group-member.userId.notNull='userId' may not be null
+delete-expert-group-member.userId.notFound=Member with the given 'user-id' does not exist.
