FAC-210: Minor Changes

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -54,4 +54,4 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.userId.notNull='userId' may not be null
-delete-expert-group-member.userId.notFound=Member with the given 'user-id' does not exist.
+delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
