FAC-329: Minor change

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -50,9 +50,9 @@ confirm-expert-group-invitation.invitation-link.notValid=Expert group invitation
 confirm-expert-group-invitation.invite-token.notValid='inviteToken' is not valid
 confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' already has access to the expert group with the 'expertGroupId'
 
-add-space-member.space-id.notUll='spaceId' may not be null
+add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
-add-space-member.space-id.notFound=No space with the given id was found
+add-space-member.spaceId.notFound=No space with the given id was found
 add-space-member.invitee-access.found=The user with the 'userId' already has access to the space with the 'spaceId'
 add-space-member.inviter-access.notFound=The inviter does not have access to the space with the 'spaceId'
 add-space-member.email.notFound=No user with the given email was found
