FAC-331:feature:Refactor use case

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -74,6 +74,6 @@ get-kit-stats.kitId.notNull='kitId' may not be null
 
 get-kit-editable-info.kitId.notNull='kitId' may not be null
 
-get-subject-detail.kitId.notNull='kitId' may not be null
-get-subject-detail.subjectId.notNull='subjectId' may not be null
-get-subject-detail.subjectId.notFound=subject with the given id does not exist
+get-kit-subject-detail.kitId.notNull='kitId' may not be null
+get-kit-subject-detail.subjectId.notNull='subjectId' may not be null
+get-kit-subject-detail.subjectId.notFound=subject with the given id does not exist
