FAC-346:feature:Impl ToggleKitLikeUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -85,3 +85,5 @@ update-kit-info.tags.size.min=Tag is required. Assessment kit should have at lea
 update-kit-info.tagId.notFount='TagId' is not valid.
 
 get-kit-detail.kitId.notNull='kitId' may not be null
+
+toggle-kit-like.kitId.notNull='kitId' may not be null
