FAC-329: minor renaming in error

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -59,7 +59,7 @@ delete-expert-group-member.userId.notFound=Member with the given 'userId' does n
 add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.notFound=No space with the given id was found
-add-space-member.invitee-access.duplicate=The user with the 'userId' already has access to the space with the 'spaceId'
+add-space-member.invitee-access.duplicate=The user with the 'email' already has access to the space with the 'spaceId'
 add-space-member.inviter-access.notFound=The inviter does not have access to the space with the 'spaceId'
 add-space-member.email.notFound=No user with the given email was found
 
