--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -55,3 +55,8 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.userId.notNull='userId' may not be null
 delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
+
+invite-space-member.space-id.notUll='userId' may not be null
+invite-space-member.email.notNull='email' may not be null
+invite-space-member.space-id.notFound='spaceId' not found
+invite-space-member.inviter-access.notFound=The user with the 'userId' does not access to the space with the 'spaceId'
