--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -60,3 +60,9 @@ invite-space-member.space-id.notUll='userId' may not be null
 invite-space-member.email.notNull='email' may not be null
 invite-space-member.space-id.notFound='spaceId' not found
 invite-space-member.inviter-access.notFound=The user with the 'userId' does not access to the space with the 'spaceId'
+
+invite-space-member.mail.subject=Invite to Flickit
+invite-space-member.mail.body=\
+    <p>Hi,</p> \
+    <p>You have been invited to join Flickit. Please click the following link to join Flickit:</p> \
+    <p><a href="{0}">Flickit</a></p>
