--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -90,6 +90,6 @@ get-kit-subject-detail.kitId.notNull='kitId' may not be null
 get-kit-subject-detail.subjectId.notNull='subjectId' may not be null
 get-kit-subject-detail.subjectId.notFound=subject with the given id does not exist
 
-get-attribute-detail.kitId.notNull='kitId' may not be null
-get-attribute-detail.attributeId.notNull='attributeId' may not be null
-get-attribute-detail.attributeId.notFound=attribute with the given id does not exist
+get-kit-attribute-detail.kitId.notNull='kitId' may not be null
+get-kit-attribute-detail.attributeId.notNull='attributeId' may not be null
+get-kit-attribute-detail.attributeId.notFound=attribute with the given id does not exist
