FAC-349 Impl delete assessment kit use-case
To delete an assessment kit, the current user should be owner of the kit's expert group, and kit shouldn't have any active assessment.
Some unit tests added for use-case input model.

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -46,6 +46,9 @@ delete-kit-user-access.kit-user.notFound=User access does not exist
 delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not exist
 delete-kit-user-access.user.notFound=User account with the given id does not exist
 
+delete-kit.kitId.notNull='kitId' may not be null
+delete-kit.hasAssessment=selected AssessmentKit to delete has assessments
+
 get-user-by-email.email.notNull='email' may not be null
 get-user-by-email.email.notFound=User account with the given email does not exist
 
