FAC-340: 'UserId and Email should be matched' test added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -58,3 +58,4 @@ delete-expert-group-member.userId.notFound=Member with the given 'userId' does n
 
 accept-space-invitations.userId.notNull='userId' may not be null
 accept-space-invitations.email.notNull='email' may not be null
+accept-space-invitations.userId-email.notFound=No user with the given email
