--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -34,10 +34,10 @@ get-kit-user-list.page.min='page' must be greater than or equal to 0
 get-kit-user-list.size.min='size' must be greater than or equal to 1
 get-kit-user-list.size.max='size' must be less than or equal to 100
 
-get-assessment-kit.list.isPrivate.notNull='isPrivate' may not be null
-get-assessment-kit-list.page.min='page' must be greater than or equal to 0
-get-assessment-kit-list.size.min='size' must be greater than or equal to 1
-get-assessment-kit-list.size.max='size' must be less than or equal to 100
+get-kit-list.isPrivate.notNull='isPrivate' may not be null
+get-kit-list.page.min='page' must be greater than or equal to 0
+get-kit-list.size.min='size' must be greater than or equal to 1
+get-kit-list.size.max='size' must be less than or equal to 100
 
 get-kit-minimal-info.kitId.notNull='kitId' may not be empty
 get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
