FAC-335: Change messages prefix

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -94,6 +94,6 @@ get-kit-attribute-detail.kitId.notNull='kitId' may not be null
 get-kit-attribute-detail.attributeId.notNull='attributeId' may not be null
 get-kit-attribute-detail.attributeId.notFound=attribute with the given id does not exist
 
-get-question-detail.kitId.notNull='kitId' may not be null
-get-question-detail.questionId.notNull='subjectId' may not be null
-get-question-detail.questionId.notFound=question with the given id does not exist
+get-kit-question-detail.kitId.notNull='kitId' may not be null
+get-kit-question-detail.questionId.notNull='subjectId' may not be null
+get-kit-question-detail.questionId.notFound=question with the given id does not exist
