--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -39,9 +39,6 @@ get-kit-user-list.size.max='size' must be less than or equal to 100
 get-kit-minimal-info.kitId.notNull='kitId' may not be empty
 get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
 
-get-questionnaire.kitId.notNull='kitId' may not be empty
-get-questionnaire.questionnaireId.notNull='questionnaireId' may not be empty
-
 get-kit-dsl-download-link.kitId.notNull='kitId' may not be empty
 get-kit-dsl-download-link.filePath.notFound='filePath' not found
 
@@ -98,3 +95,6 @@ get-kit-subject-detail.subjectId.notFound=subject with the given id does not exi
 get-kit-attribute-detail.kitId.notNull='kitId' may not be null
 get-kit-attribute-detail.attributeId.notNull='attributeId' may not be null
 get-kit-attribute-detail.attributeId.notFound=attribute with the given id does not exist
+
+get-kit-questionnaire.kitId.notNull='kitId' may not be null
+get-kit-questionnaire.questionnaireId.notNull='questionnaireId' may not be null
