--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -56,6 +56,6 @@ delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be nu
 delete-expert-group-member.userId.notNull='userId' may not be null
 delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
 
-accept-space-invitations.userId.notNull='userId' may not be null
-accept-space-invitations.email.notNull='email' may not be null
-accept-space-invitations.userId-email.notFound=No user with the given email
+accept-space-invitations.userId.notNull='userId' may not be null.
+accept-space-invitations.email.notNull='email' may not be null.
+accept-space-invitations.userId-email.notFound=User with the given email does not exist.
