--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -2,6 +2,10 @@ file-storage.file.notFound=File not found
 
 expert-group.id.notFound=ExpertGroup with the given id does not exist
 
+user-by-email.notFound=User with the given email does not exist
+
+get-user-by-email.email.notNull='email' may not be null
+
 get-expert-group-list.page.min='page' must be greater than or equal to 0
 get-expert-group-list.size.min='size' must be greater than or equal to 1
 get-expert-group-list.size.max='size' must be less than or equal to 100
