--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -60,7 +60,7 @@ invite-space-member.space-id.notUll='userId' may not be null
 invite-space-member.email.notNull='email' may not be null
 invite-space-member.space-id.notFound='spaceId' not found
 invite-space-member.inviter-access.notFound=The user with the 'userId' does not access to the space with the 'spaceId'
-invite-space-member.invitee.duplicate=The user with the 'email' already exists
+invite-space-member.invitee.duplicate=User with the 'email' already exists
 invite-space-member.mail.subject=Invite to Flickit
 invite-space-member.mail.body=\
     <p>Hi,</p> \
