--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -55,3 +55,7 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.userId.notNull='userId' may not be null
 delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
+
+create-space.title.notBlank='title' may not be empty
+create-space.title.size.min='title' length must be greater or equal to 3
+create-space.title.size.max='title' length must be less than or equal to 100
