FAC-337: Database constraint error translated

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -59,3 +59,4 @@ delete-expert-group-member.userId.notFound=Member with the given 'userId' does n
 create-space.title.notBlank='title' may not be empty
 create-space.title.size.min='title' length must be greater or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
+create-space.title.duplicate=A space with the same 'title' already exists.
