FAC-351:feature:Add GetPublishedKitUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -93,3 +93,5 @@ get-kit-subject-detail.subjectId.notFound=subject with the given id does not exi
 get-kit-attribute-detail.kitId.notNull='kitId' may not be null
 get-kit-attribute-detail.attributeId.notNull='attributeId' may not be null
 get-kit-attribute-detail.attributeId.notFound=attribute with the given id does not exist
+
+get-published-kit.kitId.notNull='kitId' may not be null
