--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -6,6 +6,7 @@ find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 kit.id.notFound=AssessmentKit with the given id does not exist
 expert-group.id.notFound=ExpertGroup with the given id does not exist
 questionnaire.id.notFound=Questionnaire with the given id does not exit
+question.id.notFound=Question with the given id does not exist
 
 update-kit-by-dsl.kitId.notNull='kitId' may not be null
 update-kit-by-dsl.kit-dsl-id.notNull='kitDslId' may not be null
