--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -64,3 +64,7 @@ add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
 
+get-space-list.page.min='page' must be greater than or equal to 0
+get-space-list.size.min='size' must be greater than or equal to 1
+get-space-list.size.max='size' must be less than or equal to 100
+
