FAC-354:feature:Impl GetExpertGroupKitListUseCase

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -98,3 +98,8 @@ get-kit-questionnaire.questionnaireId.notNull='questionnaireId' may not be null
 
 get-kit-question-detail.kitId.notNull='kitId' may not be null
 get-kit-question-detail.questionId.notNull='subjectId' may not be null
+
+get-expert-group-kit-list.expertGroupId.notNull='expertGroupId' may not be null
+get-expert-group-kit-list.page.min='page' must be greater than or equal to 0
+get-expert-group-kit-list.size.min='size' must be greater than or equal to 1
+get-expert-group-kit-list.size.max='size' must be less than or equal to 100
