--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -35,6 +35,10 @@ get-kit-user-list.page.min='page' must be greater than or equal to 0
 get-kit-user-list.size.min='size' must be greater than or equal to 1
 get-kit-user-list.size.max='size' must be less than or equal to 100
 
+search-kit-options.page.min='page' must be greater than or equal to 0
+search-kit-options.size.min='size' must be greater than or equal to 1
+search-kit-options.size.max='size' must be less than or equal to 100
+
 get-kit-minimal-info.kitId.notNull='kitId' may not be empty
 get-kit-minimal-info.kitId.notFound=AssessmentKit with the given id does not exist
 
