FAC-339: Check if user with given email exists, add to space

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -59,15 +59,13 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.userId.notNull='userId' may not be null
 delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
-
 add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
-
-invite-space-member.space-id.notUll='userId' may not be null
+invite-space-member.spaceId.notUll='userId' may not be null
 invite-space-member.email.notNull='email' may not be null
-invite-space-member.space-id.notFound='spaceId' not found
-invite-space-member.invitee.duplicate=User with the 'email' already exists
+invite-space-member.spaceId.notFound='spaceId' not found
+invite-space-member.spaceId.userId.duplicate=User with the 'email' is already a member of the space
 invite-space-member.mail.subject=Invite to Flickit
 invite-space-member.mail.body=\
     <p>Hi,</p> \
