FAC-339: Check existence of space in checkIsMember implementation

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -1,8 +1,7 @@
 file-storage.file.notFound=File not found
-
 expert-group.id.notFound=ExpertGroup with the given id does not exist
-
 user-by-email.notFound=User with the given email does not exist
+space.id.notFound=Space with the given id does not exist
 
 get-user-by-email.email.notNull='email' may not be null
 
@@ -64,7 +63,6 @@ add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
 invite-space-member.spaceId.notUll='userId' may not be null
 invite-space-member.email.notNull='email' may not be null
-invite-space-member.spaceId.notFound='spaceId' not found
 invite-space-member.spaceId.userId.duplicate=User with the 'email' is already a member of the space
 invite-space-member.mail.subject=Invite to Flickit
 invite-space-member.mail.body=\
