FAC-335: Controller and usecase implemented

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -64,3 +64,5 @@ add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
 
+get-space.spaceId.notUll='spaceId' may not be null
+
