FAC-339: Change email subject and body

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -58,14 +58,19 @@ confirm-expert-group-invitation.userId.duplicate=The user with the 'userId' alre
 delete-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 delete-expert-group-member.userId.notNull='userId' may not be null
 delete-expert-group-member.userId.notFound=Member with the given 'userId' does not exist.
+
 add-space-member.spaceId.notUll='spaceId' may not be null
 add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
+
 invite-space-member.spaceId.notUll='userId' may not be null
 invite-space-member.email.notNull='email' may not be null
 invite-space-member.spaceId.userId.duplicate=User with the 'email' is already a member of the space
-invite-space-member.mail.subject=Invite to Flickit
+invite-space-member.mail.subject=Join Flickit Now!
 invite-space-member.mail.body=\
     <p>Hi,</p> \
-    <p>You have been invited to join Flickit. Please click the following link to join Flickit:</p> \
-    <p><a href="{0}">Flickit</a></p>
+    <p>You have been invited to join Flickit. Click the link below to get started:</p> \
+    <p><a href="{0}">Join Flickit</a></p>\
+    <br>\
+    <p>Best,</p>\
+    <p>Flickit</p>
