FAC-355: Completely implemented without test

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -5,6 +5,7 @@ file-storage.file.notFound=File not found
 find-maturity-level.id.notFound=MaturityLevel with the given id does not exist
 kit.id.notFound=AssessmentKit with the given id does not exist
 expert-group.id.notFound=ExpertGroup with the given id does not exist
+space.id.notFound=Space with the given id does not exist
 questionnaire.id.notFound=Questionnaire with the given id does not exit
 question.id.notFound=Question with the given id does not exist
 attribute.id.notFound=Attribute with the given id does not exist
