FAC-361: Controller, Usecase and UsecaseParamTest added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -74,3 +74,6 @@ invite-space-member.mail.body=\
     <br>\
     <p>Best,</p>\
     <p>Flickit</p>
+
+delete-space.kits.exist=Deleting this space is not possible due to the existence of some assessments.
+delete-space.space-id.notNull='SpaceId' may not be null
