FAC-361: minor error renaming

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -75,5 +75,5 @@ invite-space-member.mail.body=\
     <p>Best,</p>\
     <p>Flickit</p>
 
-delete-space.kits.exist=Deleting this space is not possible due to the existence of some assessments.
-delete-space.space-id.notNull='SpaceId' may not be null
+delete-space.assessments.exist=Deleting this space is not possible due to the existence of some assessments.
+delete-space.spaceId.notNull='SpaceId' may not be null
