FAC-363: UseCase, ErrorMessages, Rest controller and UsecaseParamTest added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -74,3 +74,7 @@ invite-space-member.mail.body=\
     <br>\
     <p>Best,</p>\
     <p>Flickit</p>
+
+delete-space-member.spaceId.notNull='expertGroupId' may not be null
+delete-space-member.userId.notNull='userId' may not be null
+delete-space-member.userId.notFound=Member with the given 'userId' does not exist.
