--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -2,6 +2,7 @@ file-storage.file.notFound=File not found
 expert-group.id.notFound=ExpertGroup with the given id does not exist
 user-by-email.notFound=User with the given email does not exist
 space.id.notFound=Space with the given id does not exist
+user.id.notFound=User with the given id does not exist
 
 get-user-by-email.email.notNull='email' may not be null
 
