FAC-360: Controller, UseCase and UseCaseParamTest added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -74,3 +74,9 @@ invite-space-member.mail.body=\
     <br>\
     <p>Best,</p>\
     <p>Flickit</p>
+
+get-space-members.id.notNull='id' may not be null
+get-space-members.size.min='size' must be greater than or equal to 1
+get-space-members.size.max='size' must be less than or equal to 100
+get-space-members.page.min='page' must be greater than or equal to 0
+get-space-members.expertGroup.notFound=Space with the given id does not exist
