--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -82,3 +82,8 @@ get-space-members.spaceId.notNull='spaceId' may not be null
 get-space-members.size.min='size' must be greater than or equal to 1
 get-space-members.size.max='size' must be less than or equal to 100
 get-space-members.page.min='page' must be greater than or equal to 0
+
+get-space-invitees.spaceId.notNull='spaceId' may not be null
+get-space-invitees.size.min='size' must be greater than or equal to 1
+get-space-invitees.size.max='size' must be less than or equal to 100
+get-space-invitees.page.min='page' must be greater than or equal to 0
