--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -65,5 +65,5 @@ add-space-member.email.notNull='email' may not be null
 add-space-member.spaceId.userId.duplicate=User already has access to this space
 
 create-space.title.notBlank='title' may not be empty
-create-space.title.size.min='title' length must be greater or equal to 3
+create-space.title.size.min='title' length must be greater than or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
