FAC-349: Change message for impossible kit deletion

--- a/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/kit/messages_en.properties
@@ -60,7 +60,7 @@ delete-kit-user-access.kitId.notFound=AssessmentKit with the given id does not e
 delete-kit-user-access.user.notFound=User account with the given id does not exist
 
 delete-kit.kitId.notNull='kitId' may not be null
-delete-kit.hasAssessment=selected kit to delete, has assessments
+delete-kit.hasAssessment=The selected assessment kit cannot be deleted because there are assessments currently using it.
 
 upload-kit.dsl-file.notNull='dslFile' may not be null
 upload-kit.expert-group-id.notNull='expertGroupId' may not be null
@@ -113,7 +113,7 @@ get-kit-questionnaire.questionnaireId.notNull='questionnaireId' may not be null
 get-kit-question-detail.kitId.notNull='kitId' may not be null
 get-kit-question-detail.questionId.notNull='subjectId' may not be null
 
-et-attribute-level-questions.kitId.notNull='kitId' may not be null
+get-attribute-level-questions.kitId.notNull='kitId' may not be null
 get-attribute-level-questions.attributeId.notNull='attributeId' may not be null
 get-attribute-level-questions.maturityLevel.notNull='maturityLevelId' may not be null
 
