--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -81,9 +81,9 @@ get-questionnaires-progress.assessmentResult.notFound=no assessmentResult found 
 
 report-subject.assessment.id.notNull='assessmentId' may not be empty
 report-subject.subject.id.notNull='subjectId' may not be empty
+report-subject.subject.id.notFound=Subject does not exist
 report-subject.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-subject.subjectValue.notFound=no subjectValue found by this 'assessmentResultId' and 'subjectId'
-report-subject.maturityLevelId.notFound='maturityLevelId' is not valid
 
 update-evidence.id.notNull=evidence 'id' may not be empty
 update-evidence.description.notBlank=description may not be empty
