--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -86,3 +86,17 @@ get-space-members.page.min='page' must be greater than or equal to 0
 create-space.title.notBlank='title' may not be empty
 create-space.title.size.min='title' length must be greater than or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
+
+update-expert-group.expert-group-id.notNull='expertGroupId' may not be null
+update-expert-group.title.notBlank='title' may not be empty
+update-expert-group.title.size.min='title' length must be greater or equal to 3
+update-expert-group.title.size.max='title' length must be less than or equal to 100
+update-expert-group.bio.notBlank='bio' may not be empty
+update-expert-group.bio.size.min='bio' length must be greater than or equal to 3
+update-expert-group.bio.size.max='bio' length must be less than or equal to 200
+update-expert-group.about.notBlank='about' may not be empty
+update-expert-group.about.size.min='about' length must be greater than or equal to 3
+update-expert-group.about.size.max= 'about' length must be less than or equal to 500
+update-expert-group.website.notUrl='website' must be a URL
+update-expert-group.website.size.min='website' length must be greater than or equal to 3
+update-expert-group.website.size.max='website' length must be less than or equal to 200
