--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -87,6 +87,6 @@ create-space.title.notBlank='title' may not be empty
 create-space.title.size.min='title' length must be greater than or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
 
-delete-space-member.spaceId.notNull='expertGroupId' may not be null
+delete-space-member.spaceId.notNull='spaceId' may not be null
 delete-space-member.userId.notNull='userId' may not be null
 delete-space-member.userId.notFound=Member with the given 'userId' does not exist.
