--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -86,3 +86,7 @@ get-space-members.page.min='page' must be greater than or equal to 0
 create-space.title.notBlank='title' may not be empty
 create-space.title.size.min='title' length must be greater than or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
+
+create-user.email.notValid='email' format not valid
+create-user.displayName.notBlank='displayName' should not be blank
+
