--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -87,6 +87,7 @@ create-space.title.notBlank='title' may not be empty
 create-space.title.size.min='title' length must be greater than or equal to 3
 create-space.title.size.max='title' length must be less than or equal to 100
 
+create-user.userId.notNull=user id may not be null
 create-user.email.notValid='email' format not valid
 create-user.displayName.notBlank='displayName' should not be blank
 
