FAC-389 Impl update user persistence adapter

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -91,3 +91,4 @@ update-user.userId.notNull=user id may not be null
 update-user.displayName.notBank='displayName' may not be blank
 update-user.bio.size.max='bio' length must be less than or equal to 400
 update-user.linkedin.notValid='linkedin' url format not valid
+update-user.userId.notFound=user with the given id does not exist
