--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -91,7 +91,7 @@ delete-space-member.spaceId.notNull='spaceId' may not be null
 delete-space-member.userId.notNull='userId' may not be null
 delete-space-member.userId.notFound=Member with the given 'userId' does not exist.
 
-create-user.userId.notNull=user id may not be null
+create-user.userId.notNull='userId' may not be null
 create-user.email.notValid='email' format not valid
 create-user.displayName.notBlank='displayName' should not be blank
 
