--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -121,3 +121,9 @@ get-assessment-questionnaire-list.size.min='size' must be greater than or equal 
 get-assessment-questionnaire-list.size.max='size' must be less than or equal to 50
 get-assessment-questionnaire-list.page.min='page' must be greater than or equal to 0
 get-assessment-questionnaire-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
+
+grant-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
+grant-assessment-user-role.userId.notNull='userId' may not be null
+grant-assessment-user-role.roleId.notNull='roleId' may not be null
+grant-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
+grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
