FAC-404: minor change

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -108,4 +108,4 @@ get-space-list.size.max='size' must be less than or equal to 100
 
 update-space-lastSeen.spaceId.notNull='spaceId' may not be null
 
-delete-expert-group-picture.expertGroupId.notNull='expertGroupId' may not be null;
+delete-expert-group-picture.expertGroupId.notNull='expertGroupId' may not be null
