--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -123,7 +123,7 @@ get-assessment-questionnaire-list.page.min='page' must be greater than or equal 
 get-assessment-questionnaire-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
 get-assessment-questionnaire-question-list.assessmentId.notNull='assessmentId' may not be null
-get-assessment-questionnaire-question-list.questionnaireId.notNull='currentUserId' may not be null
+get-assessment-questionnaire-question-list.questionnaireId.notNull='questionnaireId' may not be null
 get-assessment-questionnaire-question-list.size.min='size' must be greater than or equal to 1
 get-assessment-questionnaire-question-list.size.max='size' must be less than or equal to 50
 get-assessment-questionnaire-question-list.page.min='page' must be greater than or equal to 0
