--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -127,3 +127,9 @@ grant-assessment-user-role.userId.notNull='userId' may not be null
 grant-assessment-user-role.roleId.notNull='roleId' may not be null
 grant-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
 grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
+
+delete-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
+delete-assessment-user-role.userId.notNull='userId' may not be null
+delete-assessment-user-role.roleId.notNull='roleId' may not be null
+delete-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
+delete-assessment-user-role.roleId.notFound=no role found by this 'roleId'
