FAC-413:feature:Add notApplicable validation to service

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -21,6 +21,7 @@ submit-answer.assessmentResult.notFound=no assessmentResult found by this 'asses
 submit-answer.questionnaireId.notNull='questionnaireId' may not be empty
 submit-answer.questionId.notNull='questionId' may not be empty
 submit-answer.questionId.notFound=no question found by this 'questionId'
+submit-answer.questionId.notMayNotBeApplicable=the question with the given id can not be answered as not applicable
 submit-answer.answerOptionId.notFound=no answerOption found by this 'answerOptionId'
 submit-answer.answerId.notFound=no answer found by this 'answerId'
 
