--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -1,6 +1,7 @@
 common.internal.error=An unexpected error occurred
 assessment-kit-id.notFound=no assessmentKit found by this 'kitId'
 evidence-id.notFound=no evidence found by this 'id'
+assessment-id.notFound=no assessment found by this 'assessmentId'
 
 create-assessment.title.notBlank=title may not be empty
 create-assessment.title.size.min=title length must be more than 3
@@ -53,7 +54,6 @@ get-answer-list.questionnaireId.notNull='questionnaireId' may not be empty
 get-answer-list.size.min='size' must be greater than or equal to 1
 get-answer-list.size.max='size' must be less than or equal to 100
 get-answer-list.page.min='page' must be greater than or equal to 0
-get-answer-list.assessmentResultId.notFound=no assessmentResult found by this 'assessmentId'
 
 get-evidence-list.questionId.notNull='questionId' may not be empty
 get-evidence-list.assessmentId.notNull='assessmentId' may not be empty
