FAC-416: Implemented completely

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -127,3 +127,9 @@ grant-assessment-user-role.userId.notNull='userId' may not be null
 grant-assessment-user-role.roleId.notNull='roleId' may not be null
 grant-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
 grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
+
+update-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
+update-assessment-user-role.userId.notNull='userId' may not be null
+update-assessment-user-role.roleId.notNull='roleId' may not be null
+update-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
+update-assessment-user-role.assessmentId-userId.notFound= no role found by this 'assessmentId' and 'userId'
