FAC-400:feature:Add ResourceAlreadyExistsException when userRoleOnAssessment already exist

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -126,6 +126,7 @@ get-assessment-questionnaire-list.assessmentResultId.notFound=no assessmentResul
 
 grant-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 grant-assessment-user-role.userId.notNull='userId' may not be null
+grant-assessment-user-role.userRoleUserIdAndAssessmentId.alreadyExist=user already has access
 grant-assessment-user-role.roleId.notNull='roleId' may not be null
 grant-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
 grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
