FAC-415 Impl get assessment privileged users use-case

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -130,3 +130,8 @@ grant-assessment-user-role.userRoleUserIdAndAssessmentId.alreadyExist=user alrea
 grant-assessment-user-role.roleId.notNull='roleId' may not be null
 grant-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
 grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
+
+get-assessment-privileged-users.assessmentId.notNull='assessmentId' may not be null
+get-assessment-privileged-users.size.min='size' must be greater than or equal to 1
+get-assessment-privileged-users.size.max='size' must be less than or equal to 100
+get-assessment-privileged-users.page.min='page' must be greater than or equal to 0
