--- a/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/messages_en.properties
@@ -4,7 +4,7 @@ common.header.authorization.notNull=Missing Authorization header
 common.currentUser.notFound='currentUser' with the given id not found
 common.assessmentResult.notFound=No assessment result found for the given assessment
 common.assessmentResult.notValid=Assessment result is not valid. Recalculation is needed
-
 upload-file.picture-size.max=Picture file size exceeds maximum limit.
 upload-file.dsl-size.max=DSL file size exceeds maximum limit.
 upload-file.size.max=File size exceeds maximum limit.
+file-storage.file.notFound=File not found
