--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -136,3 +136,4 @@ grant-assessment-user-role.userId.notNull='userId' may not be null
 grant-assessment-user-role.user.role.duplicate=User already holds a role in this assessment
 grant-assessment-user-role.roleId.notNull='roleId' may not be null
 grant-assessment-user-role.roleId.notFound=no role found by this 'roleId'
+grant-assessment-user-role.userId.notMember=User must be a member of the assessment space
