FAC-414: minor error renaming

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -141,4 +141,4 @@ grant-assessment-user-role.userId.notMember=User must be a member of the assessm
 delete-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 delete-assessment-user-role.userId.notNull='userId' may not be null
 delete-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
-delete-assessment-user-role.role.notFound=no role found by this 'userId' and 'assessmentId'
+delete-assessment-user-role.assessmentId-userId.notFound=no role found by this 'assessmentId' and 'userId'
