FAC-416: Change messages

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -141,5 +141,5 @@ grant-assessment-user-role.userId.notMember=User must be a member of the assessm
 update-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 update-assessment-user-role.userId.notNull='userId' may not be null
 update-assessment-user-role.roleId.notNull='roleId' may not be null
-update-assessment-user-role.userId.notMember=user with this 'userId' is not a member of the assessment space
-update-assessment-user-role.assessmentId-userId.notFound= no role found by this 'assessmentId' and 'userId'
+update-assessment-user-role.userId.notMember=User must be a member of the assessment space
+update-assessment-user-role.assessmentId.userId.notFound=Use has no role in this assessment to be updated
