--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -143,3 +143,4 @@ update-assessment-user-role.userId.notNull='userId' may not be null
 update-assessment-user-role.roleId.notNull='roleId' may not be null
 update-assessment-user-role.userId.notMember=User must be a member of the assessment space
 update-assessment-user-role.assessmentId.userId.notFound=Use has no role in this assessment to be updated
+update-assessment-user-role.roleId.notFound=no role found by this 'roleId'
