--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -121,3 +121,4 @@ update-space.title.size.min='title' length must be greater than or equal to 3
 update-space.title.size.max='title' length must be less than or equal to 100
 
 leave-space.spaceId.notNull='spaceId' may not be null
+leave-space.owner.notAllowed=The owner of the space cannot leave the space.
