FAC-415 Change assessment privileged user to assessment user

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -149,7 +149,7 @@ delete-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 delete-assessment-user-role.userId.notNull='userId' may not be null
 delete-assessment-user-role.assessmentId.userId.notFound=User has no role in this assessment to be deleted
 
-get-assessment-privileged-users.assessmentId.notNull='assessmentId' may not be null
-get-assessment-privileged-users.size.min='size' must be greater than or equal to 1
-get-assessment-privileged-users.size.max='size' must be less than or equal to 100
-get-assessment-privileged-users.page.min='page' must be greater than or equal to 0
+get-assessment-users.assessmentId.notNull='assessmentId' may not be null
+get-assessment-users.size.min='size' must be greater than or equal to 1
+get-assessment-users.size.max='size' must be less than or equal to 100
+get-assessment-users.page.min='page' must be greater than or equal to 0
