--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -13,7 +13,7 @@ create-assessment.duplicate.titleAndSpaceId=An assessment with the same 'title' 
 
 create-assessmentresult.assessmentId.notFound='assessmentId' is not valid
 
-create-qualityattributevalue.assessmentResultId.notFound='assessmentResultId' is not valid
+create-attributevalue.assessmentResultId.notFound='assessmentResultId' is not valid
 
 crate-subjectvalue.assessmentResultId.notFound='assessmentResultId' is not valid
 
