--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -89,7 +89,7 @@ create-space.title.size.max='title' length must be less than or equal to 100
 
 update-expert-group.expert-group-id.notNull='expertGroupId' may not be null
 update-expert-group.title.notBlank='title' may not be empty
-update-expert-group.title.size.min='title' length must be greater or equal to 3
+update-expert-group.title.size.min='title' length must be greater than or equal to 3
 update-expert-group.title.size.max='title' length must be less than or equal to 100
 update-expert-group.bio.notBlank='bio' may not be empty
 update-expert-group.bio.size.min='bio' length must be greater than or equal to 3
