FAC-428: API changed to accept inviteId

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -126,5 +126,5 @@ leave-space.spaceId.notNull='spaceId' may not be null
 leave-space.owner.notAllowed=The owner of the space cannot leave the space.
 
 delete-space-invitation.spaceId.notNull='spaceId' may not be null
-delete-space-invitation.email.notNull='email' may not be null
-delete-space-invitation.email.notFound=Invitation with the given 'email' does not exist.
+delete-space-invitation.inviteId.notNull='inviteId' may not be null
+delete-space-invitation.inviteId.notFound=Invitation with the given 'email' does not exist.
