--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -140,4 +140,4 @@ update-expert-group.website.size.min='website' length must be greater than or eq
 update-expert-group.website.size.max='website' length must be less than or equal to 200
 
 delete-space-invitation.inviteId.notNull='inviteId' may not be null
-delete-space-invitation.inviteId.notFound=Invitation with the given 'email' does not exist.
+delete-space-invitation.inviteId.notFound=Invitation with the given 'inviteId' does not exist.
