--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -25,12 +25,11 @@ submit-answer.questionId.notFound=no question found by this 'questionId'
 submit-answer.questionId.notMayNotBeApplicable=This question can not be marked as not applicable
 submit-answer.answerOptionId.notFound=no answerOption found by this 'answerOptionId'
 submit-answer.answerId.notFound=no answer found by this 'answerId'
-
 get-assessment-list.spaceId.notNullOrEmpty='spaceIds' may not be null or empty
 get-assessment-list.size.min='size' must be greater than or equal to 1
 get-assessment-list.size.max='size' must be less than or equal to 100
 get-assessment-list.page.min='page' must be greater than or equal to 0
-
+get-space-assessment-list.spaceId.notNull='spaceId' may not be null
 add-evidence.assessmentId.notFound='assessmentId' is not valid
 add-evidence.desc.notBlank=description may not be empty
 add-evidence.desc.size.min=description length must be more than 3
@@ -39,7 +38,6 @@ add-evidence.assessmentId.notNull='assessmentId' may not be empty
 add-evidence.questionId.notNull='questionId' may not be empty
 add-evidence.questionId.notFound=no question found by this 'questionId'
 add-evidence.type.invalid=evidence type is not valid
-
 update-assessment.id.notNull='assessmentId' may not be null
 update-assessment.id.notFound=no assessment found by this 'assessmentId'
 update-assessment.title.notBlank=title may not be empty
