FAC-409: Usecase and error messages added

--- a/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/users/messages_en.properties
@@ -27,6 +27,7 @@ create-expert-group.about.size.max='about' length must be less than or equal to 
 create-expert-group.website.notUrl='website' must be a URL
 create-expert-group.website.size.min='website' length must be greater than or equal to 3
 create-expert-group.website.size.max='website' length must be less than or equal to 200
+create-expert-group.pictureFileSize.maz='picture' file size must be less than {0}
 
 invite-expert-group-member.expert-group-id.notNull='expertGroupId' may not be null
 invite-expert-group-member.user-id.notNull='userId' may not be null
