FAC-437:feature:Add createdBy to GetAssessmentUseCase Result

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -103,6 +103,7 @@ get-subject-progress.subject.id.notFound=no subject found by this 'subjectId'
 
 get-assessment.assessmentId.notNull='assessmentId' may not be empty
 get-assessment.assessmentId.notFound=no assessment found by this 'assessmentId'
+get-assessment.createdById.notFound=no user found by this 'createdById'
 
 delete-assessment.id.notNull='assessmentId' may not be empty
 delete-assessment.id.notFound='assessmentId' is not valid
