--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -75,6 +75,7 @@ report-assessment.assessment.id.notNull='assessmentId' may not be empty
 report-assessment.assessmentResult.notFound=no assessmentResult found by this 'assessmentId'
 report-assessment.assessmentKit.notFound=no assessmentKit found by this 'assessmentId'
 report-assessment.expertGroup.notFound ='expertGroupId' is not valid
+report-assessment.space.notFound ='spaceId' is not valid
 
 get-assessment-progress.assessment.id.notNull='assessmentId' may not be empty
 get-assessment-progress.assessment.notFound=no assessment found by this 'assessmentId'
