FAC-476: feature : Rename usecase from CreateEvidenceAttachment to AddEvidenceAttachment

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -158,7 +158,6 @@ get-assessment-users.size.min='size' must be greater than or equal to 1
 get-assessment-users.size.max='size' must be less than or equal to 100
 get-assessment-users.page.min='page' must be greater than or equal to 0
 
-create-evidence-attachment.evidenceId.notNull='evidenceId' may not be null
-create-evidence-attachment.attachment.notNull='attachment' may not be null
-create-evidence-attachment.attachmentsCount.max=attachments count must be less than or equal to 5
-create-evidence-attachment.attachmentSize.max=size of attachment file must be less than 5 megabytes
+add-evidence-attachment.evidenceId.notNull='evidenceId' may not be null
+add-evidence-attachment.attachment.notNull='attachment' may not be null
+add-evidence-attachment.attachmentsCount.max=attachments count must be less than or equal to 5
