FAC-486:feature:Prevent deleting assessment's space owner role

--- a/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
+++ b/flickit-assessment-common/src/main/resources/i18n/core/messages_en.properties
@@ -147,6 +147,7 @@ update-assessment-user-role.userId.isSpaceOwner=Space owner role is not editable
 delete-assessment-user-role.assessmentId.notNull='assessmentId' may not be null
 delete-assessment-user-role.userId.notNull='userId' may not be null
 delete-assessment-user-role.assessmentId.userId.notFound=User has no role in this assessment to be deleted
+delete-assessment-user-role.assessmentId.userId.isSpaceOwner=Space owner role is not deletable
 
 AssessmentUserRole_VIEWER=Can view the assessment reports.
 AssessmentUserRole_COMMENTER=Can view the assessment reports. Can also comment on the assessment questions.
